Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-597

Replicate and Prepare can become mis-ordered during replica->leader transition

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • M5
    • None
    • consensus, tablet
    • None
    • M5

    Description

      On our integration test clusters, while testing http://gerrit.sjc.cloudera.com:8080/#/c/5740/ we were able to reproduce a bug wherein one of the replicas inverted the order of two requests (an INSERT and later MUTATE of the same row). This caused the MUTATE to fail with a "Not Found" error and the replicas to diverge. After hours of staring at the code, I think I understand what's happening. Detailed explanation below...

      Attachments

        Activity

          People

            tlipcon Todd Lipcon
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: